some changes to database contexT

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 	<!-- core control panel styles -->
-	<link rel="stylesheet" href="/static/css/control.css">
+	<link rel="stylesheet" href="/static/css/core.css">
 
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	
