changed return values

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
 					  				$("#output_searchResults").append(String(results["search_results"][i]) + "<hr>");
 					  			}
 
-					  			$("#n_results").html(String(results["search_results"].length));
+					  			$("#n_results").html(String(results["n_results"]));
 
 					  			
 					  		
