--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 		$(document).ready(function(){
 
-			$("#btn_search").click(function(){
+			$("#input_searchTerm").keyup(function(){
 
 				var searchTerm = $("#input_searchTerm").val();
 
